# reports_generator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  qml.qrc  resource.qrc
bundle/: Info.plist
qml/: main.qml  qmldir
qml/controls/: QMButton.qml  QMSlider.qml  QMTextField.qml  QMTrayIcon.qml
qml/style/: QMColor.qml  QMConst.qml
src/AddressInputManager/: AddressInputManager.cpp  AddressInputManager.h
src/Application/: Application.cpp  Application.h
src/ConsoleApplication/: ConsoleApplication.cpp
src/Core/: CMakeLists.txt
src/Core/ConsoleApplication/: ConsoleApplication.cpp  ConsoleApplication.h
src/Core/DataBase/: DataBaseManager.cpp  DataBaseManager.h  DataBaseRequestData.h  sqlite3_helpers.h  sqlite3_pointer.h
src/Core/DataBase/Wrappers/: ReportsGeneratorDBWrapper.cpp  ReportsGeneratorDBWrapper.h
src/Core/ExcelEditor/: ExcelEditor.cpp  ExcelEditor.h
src/Core/LocationManager/: LocationManagerBase.h  LocationManagerFactory.h
src/Core/LocationManager/macOS/: LocationManagerDelegateBridge.h  LocationManagerImpl.h  LocationManagerImpl.mm
src/Core/ReportsManager/: ReportsManager.cpp  ReportsManager.h
src/Core/cpplib/: out_ptr.hpp
src/GUI/: CMakeLists.txt
src/GUI/Application/: Application.cpp  Application.h
src/GUI/MapView/: MapViewBase.cpp  MapViewRegister.hpp
src/GUI/MapView/macOS/: MapViewDelegateBridge.mm  MapViewImpl.h  MapViewImpl.mm
src/LocationManager/: LocationManagerBase.cpp  LocationManagerBase.h  LocationManagerFactory.cpp
src/LocationManager/macOS/: LocationManagerDelegateBridge.mm  LocationManagerImpl.h  LocationManagerImpl.mm
src/MapView/: MapViewBase.cpp  MapViewBase.h  MapViewRegister.hpp
src/MapView/macOS/: LocationManagerDelegateBridge.h  LocationManagerDelegateBridge.mm  MapViewDelegateBridge.h  MapViewImpl.h  MapViewImpl.mm
tests/: CMakeLists.txt
